<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SLP Tracker</string>
    <string name="tracker_success_percent">100%</string>
    <string name="tracker_cue_percent">80%</string>
    <string name="tracker_btn_correct">Correct</string>
    <string name="tracker_btn_cue">Cue</string>
    <string name="tracker_btn_wrong">Wrong</string>
    <string name="tracker_success">Independent</string>
    <string name="tracker_cue">w/ Cue</string>
    <string name="action_reset">reset</string>
    <string-array name="goal_names">
        <item>Confrontational Naming</item>
        <item>Responsive Naming</item>
        <item>Sentence Completions</item>
        <item>Naming synonyms</item>
        <item>Naming antonyms</item>
        <item>Describing pictures</item>
        <item>Following directions</item>
        <item>Answering yes/no questions</item>
        <item>Identifying picture named</item>
        <item>Identifying body parts</item>
        <item>Problem solving</item>
        <item>Calculations</item>
        <item>Telling time</item>
        <item>Counting money</item>
        <item>Similarities/differences</item>
        <item>Orientation questions</item>
        <item>Matching picture to word</item>
        <item>Sentence comprehension</item>
        <item>Functional reading</item>
        <item>Writing words</item>
        <item>Writing sentences</item>
        <item>Locating keys on keyboard</item>
        <item>Writing/typing functional sentences</item>
        <item>Attention to the left</item>
        <item>Sustained attention for 5 minutes</item>
        <item>Divided Attention</item>
        <item>Eye contact</item>
        <item>Topic initiation</item>
        <item>Topic maintenance</item>
        <item>Articulation in words</item>
        <item>Articulation in sentences</item>
        <item>Articulation in conversation</item>
        <item>Errors in 2 minute conversation</item>
        <item>Sequencing</item>
        <item>Small Bite/Sip</item>
        <item>Memory Book</item>

    </string-array>

</resources>
