<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.reustonium.slpdatatracker.MainActivity$PlaceholderFragment">

    <LinearLayout
        android:id="@+id/tracker_scores"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:text="@string/tracker_success"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="32dp"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:text="@string/tracker_success_percent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="36dp"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/tracker_success_data"
                android:text="9/10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18dp"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:text="@string/tracker_cue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="32dp"
                android:textColor="@android:color/holo_orange_dark"/>

            <TextView
                android:text="@string/tracker_cue_percent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="36dp"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/tracker_cue_data"
                android:text="9/10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:gravity="center"/>

            </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tracker_scores"
        android:orientation="vertical"
        android:layout_marginTop="45dp">

        <Button
        android:id="@+id/tracker_btn_correct"
        android:text="@string/tracker_btn_correct"
        android:layout_margin="10dp"
        android:padding="25dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
        <Button
        android:id="@+id/tracker_btn_cue"
        android:text="@string/tracker_btn_cue"
        android:layout_margin="10dp"
        android:padding="25dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
        <Button
        android:id="@+id/tracker_btn_wrong"
        android:text="@string/tracker_btn_wrong"
        android:layout_margin="15dp"
        android:padding="25dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>
